[package]
name = "nerf"
version = "0.1.0"
authors = ["Chris Ohk <utilforever@gmail.com>"]
description = "Rust implementation of NeRF: Representing Scenes as Neural Radiance Fields for View Synthesis and its extension to follow-up research projects"
repository = "https://github.com/utilforever/nerf-rs"
readme = "README.md"
keywords = [ "pytorch", "tensorflow", "nerf", "image-based-rendering", "neural-rendering" ]
license = "MIT"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
